# arcamedia-engine

./: Cargo.toml  index.html  web.js
public/: style.css
public/shaders/: colored_vert.glsl  fragment.txt  textured_frag.glsl  textured_vert.glsl  vertex.txt
src/: camera.rs  input.rs  lib.rs  line_seg.rs  object_manager.rs  raycast.rs  shader.rs  shader_manager.rs  texture.rs  texture_manager.rs  transform.rs  vec2.rs  web.rs
src/engine/: camera.rs  input.rs  line_seg.rs  matrix.rs  mod.rs  object_manager.rs  raycast.rs  shader.rs  shader_manager.rs  text_renderer.rs  texture.rs  texture_manager.rs  timer.rs  transform.rs  vec2.rs  vec2f.rs  vec2i.rs  web.rs
src/engine/gl_objects/: mod.rs  vertex_array.rs  vertex_buffer.rs
src/engine/mesh/: dynamic_mesh.rs  dynamic_mesh_t.rs  static_mesh.rs  static_mesh_t.rs
src/engine/object/: mod.rs  player.rs  rect.rs  snake.rs  textured_rect.rs
src/engine/object/snake_game/: mod.rs  segment.rs  snake.rs
src/gl_objects/: mod.rs  vertex_array.rs  vertex_buffer.rs
src/mesh/: dynamic_mesh.rs  dynamic_mesh_t.rs  mod.rs  static_mesh.rs  static_mesh_t.rs
src/object/: mod.rs  player.rs  rect.rs  textured_rect.rs
