[package]
name = "arcemedia-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
async-std = "1.12.0"
console = "0.15.8"
image = "0.25.1"

[dependencies.web-sys]
version = "0.3.4"
features = ["Document", "Element", "HtmlCanvasElement", "WebGlBuffer", "WebGlVertexArrayObject", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "Window", "WebGlUniformLocation", "Headers", "Request", "RequestInit", "RequestMode", "Response", "console", "KeyboardEvent", "Performance", "WebGlTexture", "Blob", "FileReader"]